[package]
name = "jalb"
description = "A simple load balancer for backend HTTP services"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
http = "1.3.1"
isocountry = "0.3.2"
log = "0.4.27"
reqwest = "0.12.15"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.22"
url = "2.5.4"
