[package]
name = "jalb"
description = "A simple load balancer for backend HTTP services"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
geo = { version = "0.30.0", features = ["serde", "use-serde"] }
http = "1.3.1"
isocountry = "0.3.2"
log = { version = "0.4.27", features = ["serde"] }
ordered-float = { version = "5.0.0", features = ["serde", "speedy"] }
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.22"
url = { version = "2.5.4", features = ["serde"] }
